fix: adjust spinner position for improved visibility

--- a/src/components/Spinner/Spinner.css
+++ b/src/components/Spinner/Spinner.css
@@ -7,7 +7,7 @@
   content: '';
   position: absolute;
   left: 50%;
-  top: 50%;
+  top: 650%;
   transform: translate(-50% , -50%);
   width: 48em;
   height: 48em;
